--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
 
     <div class="page-content">
       <div class="wrapper">
+sasdsssasdprawdam czy to cholerstwo działa
         {{ content }}
+          
       </div>
     </div>
 
